# changelog-mcp

./: .gitignore  .mcp.json.example  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/skills/changelog/: SKILL.md
.claude/skills/changelog/references/: tools.md
.github/workflows/: ci.yml
documentation/changelog/: changelog-mcp-config.json
src/changelog_mcp/: __init__.py  __main__.py  server.py
src/changelog_mcp/config/: __init__.py  defaults.py  loader.py  models.py
src/changelog_mcp/formats/: __init__.py  base.py  conventional.py  keep_a_changelog.py  registry.py  smart.py
src/changelog_mcp/parser/: __init__.py  changelog.py  version.py
src/changelog_mcp/render/: __init__.py  markdown.py
src/changelog_mcp/store/: __init__.py  backup.py  jsonl.py  models.py  query.py
src/changelog_mcp/tools/: __init__.py  add.py  config.py  edit.py  import_.py  init.py  release.py  render.py  search.py  support.py  version.py
src/changelog_mcp/utils/: __init__.py  date.py  files.py  security.py
tests/: conftest.py  test_backup.py  test_config.py  test_edit.py  test_formats.py  test_import_verify.py  test_private.py  test_render.py  test_search.py  test_security.py  test_server.py  test_store_jsonl.py  test_tools_e2e.py  test_version.py
